Fix overflow issue of info images and adjust gap
I fixed an issue where the info images were overflowing their parent
container, causing them to appear off-centered

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 64px;
+  gap: 48px;
   max-width: 960px;
   margin-inline: auto;
   margin-bottom: 128px;
@@ -153,6 +153,7 @@ main {
 }
 
 .info-box img {
+  max-width: 100%;
   border: 3px solid #3882f6;
   border-radius: 5px;
 }
